--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -5,4 +5,6 @@
 .card {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Customize the shadow styles */
   }
-  
+.display-none{
+  display: none !important;
+}
